--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,34 @@
- {
-    background-color: #FEFAE0;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+nav {
+    z-index: 2;
+    background-color: #543310;
+    color: white;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+nav ul{
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+}
+nav ul li a{
+    font-size: 1rem;
+    text-decoration: none;
+    color: #ddd;
+    padding: 8px 0;
+    transition: all;
+    transition-duration: 300ms;
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
 }
