--- a/Style.css
+++ b/Style.css
@@ -3,10 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    background-color: #FEFAE0;
+}
 nav {
     z-index: 2;
-    background-color: #543310;
+    background-color: #B1AB86;
     color: white;
     padding: 1rem 2rem;
     display: flex;
@@ -31,4 +33,23 @@ nav ul li a{
     transition: all;
     transition-duration: 300ms;
     border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+.hero{
+    border: solid #819067 4px;
+    margin: 200px;
+    padding: 50px;
+    text-align: center;
+    border-radius: 40px;
+}
+.hero h2{
+    font-size: 33px;
+    margin-bottom: 20px;
+    color: #0A400C;
+}
+.hero p{
+    font-size: 20px;
+}
+nav ul li a:hover{
+    color: #0A400C;
+    border-bottom: 2px solid #819067;
 }
