--- a/Style.css
+++ b/Style.css
@@ -48,7 +48,7 @@ body {
     object-fit: cover;
     height: 100vh;
     display: absolute;
-    justify-content: center;
+    justify-content: relative;
     align-items: center;
     text-align: center;
 }
@@ -70,6 +70,7 @@ body {
   border-radius: 5px;
   transition: 0.3s ease;
   text-decoration: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 1);
 
 }
 .hero-text button a {
@@ -82,141 +83,86 @@ body {
   color: #fefae0;
   cursor: pointer;
 }
-.hero-text a:hover {
-  color: B1AB86;
-}
 .hero img {
   width: 100%;
-  height: 111vh;
+  height: 112vh;
   overflow: hidden;
   object-fit: cover;
   opacity: 50%;
+  justify-content: relative;
+  align-content: center;
+  display: relative;
+
 }
 .hero-text{
-    border: #0a400c 2px solid;
+    border: #0a400c 3.5px solid;
     padding: 20px;
     border-radius: 10px;
-    margin-left: 560.5px ;
     align-content: center;
     text-align: center;
+    width: 600px;
+    margin: auto;
     position: absolute;
-    bottom: 250px;
+    top: 50%;
+    left: 33%;
 }
 .footer-main {
   background-color: #b1ab86;
   color: #0a400c;
   text-align: center;
   padding: 10px 0;
-  margin-top: 50px;
-  position: relative;
+  margin-top: 93px;
+
 }
 .login-container {
-  margin-top: 200px;
+  margin: 170px auto;
   border: #0a400c 4px solid;
   border-radius: 50px;
-  margin-left: 40px;
-  padding: 100px;
-  width: 450px;
-  height: 500px;
+  width: 1000px;
+  height: 700px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
 }
-.login-text {
-  text-align: center;
-  margin-bottom: 20px;
-}
-.login-container h2{
-  margin-bottom: 20px;
-  color: #0a400c;
-  text-align: center;
-  margin-top: -70px;
-  font-size: 40px;
-  margin-bottom: 90px;
-}
-.form-login  {
-  margin-bottom: 15px;
-  font-size: 18px;
-  text-decoration: none;
-  text-align: left;  
-}
-form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 5px;
-  text-decoration: none;
-}
-form button {
-  width: 100%;
-  padding: 10px;
-  background-color: #819067;
-  color: #0a400c;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-  margin-top: 50px;
-}
-form button:hover {
-  background-color: #0a400c;
-  color: #fefae0;
-}
-.form-main{
+.login-form {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: left;
+  justify-content: relative;
+  height: 100%;
+  padding: 50px;
+  margin-top: 10%;
 }
-.signup-container {
-  margin-top: 200px;
-  border: #0a400c 4px solid;
-  border-radius: 50px;
-  margin-left: 40px;
-  padding: 100px;
-  width: 450px;
-  height: 500px;
-}
-.signup-text {
-  text-align: center;
-  margin-bottom: 20px;
-}
-.signup-container h2{
+.login-form h2 {
   margin-bottom: 20px;
   color: #0a400c;
-  text-align: center;
-  margin-top: -70px;
-  font-size: 40px;
-  margin-bottom: 90px;
 }
-.signup-text  {
-  margin-bottom: 15px;
-  font-size: 18px;
-  text-decoration: none;
-  text-align: left;  
+.login-form label {
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #0a400c;
 }
-.signup-text input {
-  width: 100%;
+.login-form input {
+  width: 300px;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 5px;
-  text-decoration: none;
 }
-.signup-text button {
-  width: 100%;
-  padding: 10px;
+.login-form button {
+  padding: 10px 20px;
   background-color: #819067;
   color: #0a400c;
   border: none;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  text-decoration: none;
-  margin-top: 50px;
 }
-.signup-text button:hover {
+.login-form button:hover {
   background-color: #0a400c;
   color: #fefae0;
 }
+.checkbox {
+  
+}
+ 
+
