--- a/(2). News.css
+++ b/(2). News.css
@@ -95,6 +95,43 @@ body {
     color: #fff;
 }
 
+.card-content .btn:hover{
+    background-color: #5d684a;
+    transition: 0,8s ease;
+}
+
+.card-action{
+    display: flex;
+    align-items: center;      /* sejajar vertikal */
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.card-icon{
+    display: flex;            /* membuat icon sejajar ke samping */
+    align-items: center;
+    gap: 8px;                 /* jarak antar icon */
+}
+
+.card-icon svg{
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+}
+
+.icon-link{
+    display: flex;
+    align-items: center;
+    color: inherit;          /* warna mengikuti icon */
+    text-decoration: none;
+}
+
+.icon-link:hover{
+    color: #819067;          /* efek hover */
+}
+
+
+
 
 /* Styling Footer Utama */
 .main-footer {
