--- a/(4). profile.css
+++ b/(4). profile.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: #729660;
+    background-color: #fefae0;
 }
 
 .navbar {
